=======
CHANGES
=======

1.2.0 (unreleased)
------------------

- Register `batch.Batch` as named (``"z3c.batching.batch"``) factory.

1.1.0 (2008-11-12)
------------------

- Added a function to build a small neighbourhood list of the current batch,
  from a large batch list. (extracted from z3c.table)

- Really fixed the bug with batches slicing

1.0.1 (2008-09-09)
------------------

- Fixed bug with batches slicing.


1.0.0 (2008-02-18)
------------------

- Initial release.